results/SVCOMP/conversational/log-URLDecoder02-2024_03_18_01_14_43.txt
public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1 != null && s1.startsWith("some") && s1.endsWith("some-url"));
    //@ ensures !\result ==> (\forall String s1; s1 != null && s1.startsWith("some") && s1.endsWith("some-url"); s1 == null);
    public static boolean f(String arg) {

        String s1 = Verifier.nondetString() + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:8: error: cannot find symbol
        String s1 = Verifier.nondetString() + "some-url";
                    ^
  symbol:   variable Verifier
  location: class URLDecoder02
1 error

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1 != null && s1.startsWith("some") && s1.endsWith("some-url"));
    //@ ensures !\result ==> (\forall String s1; s1 != null && s1.startsWith("some") && s1.endsWith("some-url"); s1 == null);
    public static boolean f(String arg) {

        String s1 = arg + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
